scilint build improvements

--- a/nbs/converters/to_metaflow.ipynb
+++ b/nbs/converters/to_metaflow.ipynb
@@ -65,7 +65,7 @@
     "from nbdev.config import get_config\n",
     "from nbdev.doclinks import nbglob\n",
     "\n",
-    "from sciflow.params import extract_param_meta, params_as_dict\n",
+    "from sciflow.params import extract_param_meta, params_as_dict, ParamMeta\n",
     "from sciflow.parse_module import FuncDetails, extract_module_only, extract_steps\n",
     "from sciflow.utils import (\n",
     "    find_default_export,\n",
@@ -97,32 +97,6 @@
     "nb = read_nb(nb_path)\n",
     "module_name = find_default_export(nb[\"cells\"]).replace(\".\", \"/\")\n",
     "test_module = os.path.join(get_config().path(\"lib_path\"), f\"{module_name}.py\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "prepare_env()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "nb_path = Path(test_dir, \"test_multistep.ipynb\")\n",
-    "nb = read_nb(nb_path)\n",
-    "module_name = find_default_export(nb[\"cells\"]).replace(\".\", \"/\")\n",
-    "test_module = os.path.join(get_config().path(\"lib_path\"), f\"{module_name}.py\")\n",
-    "steps = extract_steps(test_module)"
    ]
   },
   {
@@ -203,7 +177,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "TODO: add logging"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## `nb_to_metaflow`"
    ]
@@ -319,15 +304,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO test"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -345,15 +321,15 @@
     "# | export\n",
     "\n",
     "\n",
-    "def write_params(flow_file, param_meta, ind):\n",
-    "    for param in param_meta.keys():\n",
-    "        if param_meta[param].is_scalar:\n",
+    "def write_params(flow_file, param_metas, ind):\n",
+    "    for param in param_metas.keys():\n",
+    "        if param_metas[param].is_scalar:\n",
     "            flow_file.write(f\"{ind}{param} = Parameter('{param}', default={param})\\n\")\n",
-    "        elif param_meta[param].is_json_type:\n",
+    "        elif param_metas[param].is_json_type:\n",
     "            flow_file.write(\n",
     "                f\"{ind}{param} = Parameter('{param}', default=json.dumps({param}), type=JSONType)\\n\"\n",
     "            )\n",
-    "        elif param_meta[param].instance_type == PosixPath:\n",
+    "        elif param_metas[param].instance_type == PosixPath:\n",
     "            flow_file.write(\n",
     "                f\"{ind}{param} = Parameter('{param}', default=str({param}))\\n\"\n",
     "            )"
@@ -365,7 +341,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO test"
+    "import tempfile\n",
+    "\n",
+    "param_meta_dict = {\"foo\": ParamMeta(instance_type=str, \n",
+    "                                    is_scalar=True, \n",
+    "                                    is_json_type=False, \n",
+    "                                    persist_type=\"pickle\", \n",
+    "                                    has_metaflow_param=True,\n",
+    "                                    has_sagemaker_param=True)}\n",
+    "with tempfile.TemporaryDirectory() as temp_dir:\n",
+    "    with open(Path(temp_dir, \"flow\"), \"w\") as flow_file:\n",
+    "        write_params(flow_file, param_meta_dict, \"\")\n",
+    "    with open(Path(temp_dir, \"flow\"), \"r\") as written_file:\n",
+    "        file_lines = written_file.readlines()\n",
+    "assert file_lines == [\"foo = Parameter('foo', default=foo)\\n\"]"
    ]
   },
   {
@@ -424,7 +413,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO test"
+    "assert \"self.foo\" == format_arg(\"foo\", {\"foo\": ParamMeta(instance_type=str, \n",
+    "                                    is_scalar=True, \n",
+    "                                    is_json_type=False, \n",
+    "                                    persist_type=\"pickle\", \n",
+    "                                    has_metaflow_param=True,\n",
+    "                                    has_sagemaker_param=True)})\n",
+    "assert \"foo\" == format_arg(\"foo\", {\"foo\": ParamMeta(instance_type=str, \n",
+    "                                    is_scalar=True, \n",
+    "                                    is_json_type=False, \n",
+    "                                    persist_type=\"pickle\", \n",
+    "                                    has_metaflow_param=False,\n",
+    "                                    has_sagemaker_param=True)})"
    ]
   },
   {
@@ -504,6 +504,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "expected_lines = \"\"\"    \n",
+    "for key in results.keys():\n",
+    "    if key in self.__dict__:\n",
+    "        self.__dict__[key] = self.__dict__[key] + results[key]\n",
+    "    else:\n",
+    "        self.__dict__[key] = results[key]\n",
+    "\"\"\".strip(' \\n')\n",
+    "with tempfile.TemporaryDirectory() as temp_dir:\n",
+    "    with open(Path(temp_dir, \"flow\"), \"w\") as flow_file:\n",
+    "        write_track_capture(flow_file, \"    \", 0)\n",
+    "    with open(Path(temp_dir, \"flow\"), \"r\") as written_file:\n",
+    "        file_lines = written_file.readlines()\n",
+    "assert ''.join(file_lines).strip('\\n') == expected_lines"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -524,16 +547,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "prepare_env()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "nb_path = Path(test_dir, \"test_multistep.ipynb\")\n",
+    "nb = read_nb(nb_path)\n",
+    "module_name = find_default_export(nb[\"cells\"]).replace(\".\", \"/\")\n",
+    "test_module = os.path.join(get_config().path(\"lib_path\"), f\"{module_name}.py\")\n",
+    "steps = extract_steps(test_module)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converted test_data_handling.ipynb to TestDataHandlingFlow in: test_data_handling.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nb_to_metaflow(nb_path, get_flow_path(nb_path), silent=False)"
    ]
@@ -544,14 +585,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO test"
+    "test_nb_path = Path(test_dir, \"test_multistep.ipynb\")\n",
+    "test_flow_path = get_flow_path(Path(test_dir, \"test_multistep.ipynb\"))\n",
+    "if test_flow_path.exists():\n",
+    "    test_flow_path.unlink()\n",
+    "assert not test_flow_path.exists()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted test_multistep.ipynb to TestMultistepFlow in: test_multistep.py\n"
+     ]
+    }
+   ],
    "source": [
     "nb_to_metaflow(\n",
     "    Path(test_dir, \"test_multistep.ipynb\"),\n",
@@ -566,7 +619,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO test"
+    "assert test_flow_path.exists()"
    ]
   },
   {
@@ -574,6 +627,18 @@
    "metadata": {},
    "source": [
     "# Ignore notebooks without Sciflow steps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "no_steps_path = Path(\"packaging.ipynb\")\n",
+    "assert not get_flow_path(Path(nbs_dir, \"packaging.ipynb\")).exists()"
    ]
   },
   {
@@ -590,10 +655,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# TODO test"
+    "assert not get_flow_path(Path(nbs_dir, \"packaging.ipynb\")).exists()"
    ]
   },
   {
@@ -641,6 +708,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Converted test_multistep.ipynb to TestMultistepFlow in: test_multistep.py\n",
       "Converted test_export.ipynb to TestExportFlow in: test_export.py\n",
       "Converted test_module.ipynb to TestModuleFlow in: test_module.py\n",
       "No params cell found for: test_multistep_no_params.ipynb\n",
