--- a/nbs/packaging.ipynb
+++ b/nbs/packaging.ipynb
@@ -105,8 +105,7 @@
    "outputs": [],
    "source": [
     "test_dir = Path(\"test\").resolve()\n",
-    "generated_reqs_path = Path(test_dir, \"requirements-generated.txt\")\n",
-    "assert(generated_reqs_path).exists()"
+    "generated_reqs_path = Path(test_dir, \"requirements-generated.txt\")"
    ]
   },
   {
@@ -233,12 +232,24 @@
    },
    "outputs": [],
    "source": [
+    "libs = [l.split(\"==\")[0] for l in reqs_file_to_sep_str(generated_reqs_path).split(\" \")]\n",
+    "core_libs = [\"scilint\", \"sagemaker\", \"pandas\", \"metaflow\"]\n",
+    "assert sorted(core_libs) == sorted([x for x in libs if x in core_libs])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "if os.path.exists(generated_reqs_path):\n",
     "    os.remove(generated_reqs_path)\n",
     "assert not os.path.exists(generated_reqs_path)\n",
     "determine_dependencies(out_dir=test_dir)\n",
-    "assert os.path.exists(generated_reqs_path)\n",
-    "os.remove(generated_reqs_path)"
+    "assert os.path.exists(generated_reqs_path)"
    ]
   },
   {
@@ -678,7 +689,7 @@
        "        'HOME': '/home/sagemaker-user',\n",
        "        'MAMBA_USER': 'sagemaker-user',\n",
        "        'MAMBA_USER_ID': '57439',\n",
-       "        'AWS_CONTAINER_CREDENTIALS_RELATIVE_URI': '/_sagemaker-instance-credentials/a0a5b692448469dacfecfb048eeb459258b9a2da6a0b1198bd05313b52eff277',\n",
+       "        'AWS_CONTAINER_CREDENTIALS_RELATIVE_URI': '/_sagemaker-instance-credentials/b90e56d898208b3e991dcd0bb86faf91d99404cfc6c4e5d0fc18655d24b62756',\n",
        "        'PYTHONNOUSERSITE': '0',\n",
        "        'AWS_DEFAULT_REGION': 'eu-west-1',\n",
        "        'PATH': '/opt/conda/bin:/opt/conda/condabin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/tmp/miniconda3/condabin:/tmp/anaconda3/condabin:/tmp/miniconda2/condabin:/tmp/anaconda2/condabin:/tmp/mambaforge/condabin',\n",
@@ -693,13 +704,13 @@
        "        'PWD': '/home/sagemaker-user',\n",
        "        'AWS_SAGEMAKER_PYTHONNOUSERSITE': '0',\n",
        "        'SAGEMAKER_LOG_FILE': '/var/log/studio/kernel_gateway.log',\n",
-       "        'SAGEMAKER_INTERNAL_IMAGE_URI': '819792524951.dkr.ecr.eu-west-1.amazonaws.com/sagemaker-distribution-prod@sha256:7c6b7a208f61e208ffee9bf46f4bfa6cad6a8220997b1936250c162c820c912f',\n",
+       "        'SAGEMAKER_INTERNAL_IMAGE_URI': '819792524951.dkr.ecr.eu-west-1.amazonaws.com/sagemaker-distribution-prod@sha256:b49a54ff7ca519dd57cf1a3a7a675f3db5c591fab456f9374e390fb68a99edaf',\n",
        "        'JUPYTER_PATH': '/opt/conda/share/jupyter/',\n",
        "        'KERNEL_LAUNCH_TIMEOUT': '40',\n",
        "        'PYDEVD_USE_FRAME_EVAL': 'NO',\n",
        "        'KERNEL_WORKING_PATH': 'git/sciflow/nbs',\n",
        "        'KERNEL_GATEWAY': '1',\n",
-       "        'JPY_PARENT_PID': '8',\n",
+       "        'JPY_PARENT_PID': '7',\n",
        "        'TERM': 'xterm-color',\n",
        "        'CLICOLOR': '1',\n",
        "        'FORCE_COLOR': '1',\n",
