--- a/nbs/params.ipynb
+++ b/nbs/params.ipynb
@@ -23,6 +23,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -64,6 +71,13 @@
    },
    "source": [
     "# Basic Papermill Params Utilities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `find_params_cell`"
    ]
   },
   {
@@ -114,6 +128,13 @@
     "    \"outputs\": [],\n",
     "    \"source\": \"# parameters\\n\",\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `add_missing_params_cell`"
    ]
   },
   {
@@ -169,6 +190,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `extract_params`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -194,6 +222,13 @@
     "assert \"some_params\" in params_code\n",
     "assert \"input_path\" in params_code\n",
     "assert \"model_path\" in params_code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `extract_params_to_file`"
    ]
   },
   {
@@ -224,6 +259,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `list_mod_files`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -242,6 +284,13 @@
     "            default = os.path.sep.join(default.split(\".\"))\n",
     "            modules.append(default)\n",
     "    return modules"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `extract_params_to_file`"
    ]
   },
   {
@@ -265,10 +314,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `_lines_to_dict`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Iterable' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# | exporti\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_lines_to_dict\u001b[39m(lines: \u001b[43mIterable\u001b[49m[\u001b[38;5;28mstr\u001b[39m]):\n\u001b[1;32m      5\u001b[0m     result \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m lines:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Iterable' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# | exporti\n",
     "\n",
@@ -281,6 +351,13 @@
     "        (key, val) = line.split(\"=\")\n",
     "        result[key.strip()] = val.strip('\\n \"')\n",
     "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `extract_params_as_dict`"
    ]
   },
   {
@@ -309,6 +386,13 @@
     "    os.path.join(get_config().path(\"lib_path\"), \"test\", \"test_export_params.py\")\n",
     ")\n",
     "tup = tuple(params_dict.keys())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `params_as_dict`"
    ]
   },
   {
@@ -398,6 +482,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `ParamMeta` class"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -416,6 +507,13 @@
     "    persist_type: str\n",
     "    has_metaflow_param: bool\n",
     "    has_sagemaker_param: bool"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `load_module`"
    ]
   },
   {
@@ -498,7 +596,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# `extract_param_meta`"
+    "## `extract_param_meta`"
    ]
   },
   {
