--- a/nbs/test/test_multistep.ipynb
+++ b/nbs/test/test_multistep.ipynb
@@ -101,7 +101,8 @@
     "traffic_percent = 1\n",
     "workers = 8\n",
     "model_level = \"dispatcher\"\n",
-    "min_date = \"2021-01-01\""
+    "min_date = \"2021-01-01\"\n",
+    "proc_image_uri = \"823878111748.dkr.ecr.eu-west-1.amazonaws.com/sagemaker-training-custom:dstk-training\""
    ]
   },
   {
