--- a/nbs/run_flow.ipynb
+++ b/nbs/run_flow.ipynb
@@ -965,7 +965,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Flow: test_export.py run verified\n",
+      "Flow: test_data_handling.py run verified\n",
+      "Flow: test_module.py run verified\n"
+     ]
+    }
+   ],
    "source": [
     "# | notest\n",
     "\n",
