Scilint compliant - no issues

--- a/nbs/converters/to_metaflow.ipynb
+++ b/nbs/converters/to_metaflow.ipynb
@@ -30,7 +30,16 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -478,7 +487,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## `write_track_capture`"
    ]
@@ -501,6 +512,93 @@
     "    )\n",
     "    flow_file.write(f\"{base_ind}{ind}else:\\n\")\n",
     "    flow_file.write(f\"{base_ind}{ind}{ind}self.__dict__[key] = results[key]\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from io import StringIO\n",
+    "flow_stream = StringIO()\n",
+    "params_meta = {\"foo\": ParamMeta(instance_type=str, \n",
+    "                                    is_scalar=True, \n",
+    "                                    is_json_type=False, \n",
+    "                                    persist_type=\"pickle\", \n",
+    "                                    has_metaflow_param=True,\n",
+    "                                    has_sagemaker_param=True)}\n",
+    "steps = [FuncDetails(\"first\", \n",
+    "                     docstring=\"none\", \n",
+    "                     args=\"foo\",\n",
+    "                     has_return=True, \n",
+    "                     return_stmt=\"results={'bar': 1}}\",\n",
+    "                     code=\"\"),\n",
+    "         FuncDetails(\"last\", \n",
+    "                     docstring=\"bla\", \n",
+    "                     args=\"bar\",\n",
+    "                     has_return=True, \n",
+    "                     return_stmt=\"results={'bar': 2}}\",\n",
+    "                     code=\"bar = [1,2,3]\")\n",
+    "        ]\n",
+    "write_steps(flow_stream, steps, [\"first\", \"last\"], params_meta, \"    \")\n",
+    "flow_stream.seek(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "expected = \"\"\"\n",
+    "@step\n",
+    "    def first(self):\n",
+    "        \\\"\\\"\\\"none\\\"\\\"\\\"\n",
+    "        results = first(self.foo)\n",
+    "        for key in results.keys():\n",
+    "            if key in self.__dict__:\n",
+    "                self.__dict__[key] = self.__dict__[key] + results[key]\n",
+    "            else:\n",
+    "                self.__dict__[key] = results[key]\n",
+    "        self.next(self.last)\n",
+    "\n",
+    "    @step\n",
+    "    def last(self):\n",
+    "        \\\"\\\"\\\"bla\\\"\\\"\\\"\n",
+    "        results = last(self.bar)\n",
+    "        for key in results.keys():\n",
+    "            if key in self.__dict__:\n",
+    "                self.__dict__[key] = self.__dict__[key] + results[key]\n",
+    "            else:\n",
+    "                self.__dict__[key] = results[key]\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "assert flow_stream.read().strip(' \\n') == expected.strip(' \\n')"
    ]
   },
   {
