Fixed bug with nbdev_test by removign nb_export in utils. Some refactoring and tidying too

--- a/nbs/converters/to_sagemaker.ipynb
+++ b/nbs/converters/to_sagemaker.ipynb
@@ -355,6 +355,7 @@
    "source": [
     "# | export\n",
     "\n",
+    "\n",
     "def format_arg(arg, param_meta):\n",
     "    if arg in param_meta and not param_meta[arg].has_metaflow_param:\n",
     "        result = arg\n",
@@ -1111,17 +1112,35 @@
     "            flow_file.write(f\"{indent_multiline(step.docstring, 2)}\\n\")\n",
     "\n",
     "        if is_processing_step(step):\n",
-    "            step_param_meta = _write_processing_step(return_vars, step_vars, flow_file, \n",
-    "                                                     ind, step, param_meta, \n",
-    "                                                     outputs, lib_name, proc_image_uri, \n",
-    "                                                     proc_instance_type, module_local_name)\n",
+    "            step_param_meta = _write_processing_step(\n",
+    "                return_vars,\n",
+    "                step_vars,\n",
+    "                flow_file,\n",
+    "                ind,\n",
+    "                step,\n",
+    "                param_meta,\n",
+    "                outputs,\n",
+    "                lib_name,\n",
+    "                proc_image_uri,\n",
+    "                proc_instance_type,\n",
+    "                module_local_name,\n",
+    "            )\n",
     "            steps_param_meta.update(step_param_meta)\n",
     "            proc_flow_scope.extend(return_vars)\n",
     "        elif is_train_step(step):\n",
-    "            step_param_meta = _write_train_step(return_vars, step_vars, flow_file, \n",
-    "                                                ind, step, param_meta, outputs, \n",
-    "                                                lib_name, train_image_uri, \n",
-    "                                                train_instance_type, module_local_name)\n",
+    "            step_param_meta = _write_train_step(\n",
+    "                return_vars,\n",
+    "                step_vars,\n",
+    "                flow_file,\n",
+    "                ind,\n",
+    "                step,\n",
+    "                param_meta,\n",
+    "                outputs,\n",
+    "                lib_name,\n",
+    "                train_image_uri,\n",
+    "                train_instance_type,\n",
+    "                module_local_name,\n",
+    "            )\n",
     "            steps_param_meta.update(step_param_meta)\n",
     "            train_flow_scope.extend(return_vars)\n",
     "\n",
@@ -1145,19 +1164,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _write_processing_step(return_vars, \n",
-    "                           step_vars, \n",
-    "                           flow_file,\n",
-    "                           ind, \n",
-    "                           step,\n",
-    "                           param_meta,\n",
-    "                           outputs,\n",
-    "                           lib_name,\n",
-    "                           proc_image_uri,\n",
-    "                           proc_instance_type,\n",
-    "                           module_local_name):\n",
+    "def _write_processing_step(\n",
+    "    return_vars,\n",
+    "    step_vars,\n",
+    "    flow_file,\n",
+    "    ind,\n",
+    "    step,\n",
+    "    param_meta,\n",
+    "    outputs,\n",
+    "    lib_name,\n",
+    "    proc_image_uri,\n",
+    "    proc_instance_type,\n",
+    "    module_local_name,\n",
+    "):\n",
     "    steps_param_meta = {}\n",
-    "    \n",
+    "\n",
     "    write_script_processor(flow_file, ind, proc_image_uri, proc_instance_type)\n",
     "    flow_file.write(\"\\n\")\n",
     "    flow_file.write(f\"{ind}{ind}{step.name}_step = ProcessingStep(\\n\")\n",
@@ -1252,19 +1273,21 @@
    },
    "outputs": [],
    "source": [
-    "def _write_train_step(return_vars,\n",
-    "                      step_vars,\n",
-    "                      flow_file, \n",
-    "                      ind, \n",
-    "                      step, \n",
-    "                      param_meta, \n",
-    "                      outputs, \n",
-    "                      lib_name, \n",
-    "                      train_image_uri, \n",
-    "                      train_instance_type, \n",
-    "                      module_local_name):\n",
+    "def _write_train_step(\n",
+    "    return_vars,\n",
+    "    step_vars,\n",
+    "    flow_file,\n",
+    "    ind,\n",
+    "    step,\n",
+    "    param_meta,\n",
+    "    outputs,\n",
+    "    lib_name,\n",
+    "    train_image_uri,\n",
+    "    train_instance_type,\n",
+    "    module_local_name,\n",
+    "):\n",
     "    steps_param_meta = {}\n",
-    "    \n",
+    "\n",
     "    if len(step_vars) > 0:\n",
     "        train_outs = {\n",
     "            (v, f\"{step.name}_step.properties.ModelArtifacts.S3ModelArtifacts\")\n",
@@ -1303,36 +1326,27 @@
     "        for key, val in hyper_params.items():\n",
     "            flow_file.write(f'{ind}{ind}{ind}{ind}\"{key}\": {val},\\n')\n",
     "        flow_file.write(f\"{ind}{ind}{ind}}},\\n\")\n",
-    "        flow_file.write(\n",
-    "            f'{ind}{ind}{ind}instance_type = \"{train_instance_type}\",\\n'\n",
-    "        )\n",
+    "        flow_file.write(f'{ind}{ind}{ind}instance_type = \"{train_instance_type}\",\\n')\n",
     "        flow_file.write(f\"{ind}{ind}{ind}instance_count = 1,\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}output_path = self.flow_s3_uri,\\n\")\n",
     "        flow_file.write(f'{ind}{ind}{ind}base_job_name = \"{step.name}\",\\n')\n",
     "        flow_file.write(\n",
     "            f'{ind}{ind}{ind}code_location = f\"{{self.flow_s3_uri}}/code\",\\n'\n",
     "        )\n",
-    "        flow_file.write(\n",
-    "            f\"{ind}{ind}{ind}sagemaker_session = self.sagemaker_session,\\n\"\n",
-    "        )\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}sagemaker_session = self.sagemaker_session,\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}role = self.role,\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}metric_definitions=metrics_regex,\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{ind}enable_sagemaker_metrics=True,\\n\")\n",
     "        flow_file.write(\n",
     "            f\"{ind}{ind}{ind}environment={{'AWS_DEFAULT_REGION': self.region,\\n\"\n",
     "        )\n",
-    "        flow_file.write(\n",
-    "            f\"{ind}{ind}{ind}{ind}{ind}'SCIFLOW_BUCKET': self.bucket}}\\n\"\n",
-    "        )\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}'SCIFLOW_BUCKET': self.bucket}}\\n\")\n",
     "        flow_file.write(f\"{ind}{ind})\\n\")\n",
     "        flow_file.write(\"\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}{step.name}_step = TrainingStep(\\n\")\n",
     "        flow_file.write(f'{ind}{ind}{ind}name=\"{step.name}\",\\n')\n",
     "        flow_file.write(f\"{ind}{ind}{ind}estimator=estimator,\\n\")\n",
-    "        if (\n",
-    "            \"step_proc_vars\" in step_vars\n",
-    "            and len(step_vars[\"step_proc_vars\"]) > 0\n",
-    "        ):\n",
+    "        if \"step_proc_vars\" in step_vars and len(step_vars[\"step_proc_vars\"]) > 0:\n",
     "            flow_file.write(f\"{ind}{ind}{ind}inputs={{\\n\")\n",
     "            for training_input in step_vars[\"step_proc_vars\"]:\n",
     "                flow_file.write(\n",
