--- a/nbs/export_step.ipynb
+++ b/nbs/export_step.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# | default_exp export_step"
@@ -28,15 +30,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# | export\n",
     "\n",
     "import os\n",
     "from collections import defaultdict\n",
-    "from warnings import warn\n",
     "from pathlib import Path\n",
+    "from warnings import warn\n",
     "\n",
     "import nbdev\n",
     "from fastcore.basics import ifnone\n",
@@ -63,10 +67,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "test_nb_path = Path(\"test\", \"test_multistep.ipynb\")"
+    "test_nb_path = Path(\"test\", \"test_export_step.ipynb\")"
    ]
   },
   {
@@ -79,7 +85,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# |export\n",
@@ -123,13 +131,15 @@
     "assert len(proc.modules) == 0\n",
     "proc._export_step_(\"cell code\", \"step_name\")\n",
     "assert len(proc.modules) == 1\n",
-    "assert proc.modules['#'] == [\"cell code\"]"
+    "assert proc.modules[\"#\"] == [\"cell code\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# |export\n",
@@ -170,7 +180,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# |export\n",
@@ -206,7 +218,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "_, module_path = load_nb(test_nb_path)"
@@ -215,7 +229,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "if module_path.exists():\n",
@@ -236,7 +252,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "nb_named_export(test_nb_path)"
@@ -245,7 +263,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "assert module_path.exists()"
@@ -254,19 +274,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "with open(module_path, \"r\") as module_file:\n",
-    "    steps = [line for line in module_file.readlines() \n",
-    "                     if line.strip().replace(' ', '').startswith('#|export_step')]\n",
-    "    \n",
-    "assert [step.split('export_step')[1].strip() for step in steps] == ['first', 'preprocess', 'fit', 'evaluate']"
+    "    steps = [\n",
+    "        line\n",
+    "        for line in module_file.readlines()\n",
+    "        if line.strip().replace(\" \", \"\").startswith(\"#|export_step\")\n",
+    "    ]\n",
+    "\n",
+    "assert [step.split(\"export_step\")[1].strip() for step in steps] == [\n",
+    "    \"first\",\n",
+    "    \"preprocess\",\n",
+    "    \"fit\",\n",
+    "    \"evaluate\",\n",
+    "]"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# CLI Commands"
    ]
@@ -283,7 +315,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# |export\n",
@@ -325,9 +359,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
+    "# | notest\n",
+    "\n",
+    "\n",
     "path: str = None\n",
     "files = nbglob(path=path, as_path=True).sorted(\"name\")\n",
     "\n",
