--- a/nbs/init.ipynb
+++ b/nbs/init.ipynb
@@ -186,7 +186,9 @@
     "        with open(env_path, \"r\") as env_file:\n",
     "            lines = env_file.readlines()\n",
     "    except FileNotFoundError:\n",
-    "        raise FileNotFoundError(\"The Sciflow environment file is missing - have you run sciflow_init?\")\n",
+    "        raise FileNotFoundError(\n",
+    "            \"The Sciflow environment file is missing - have you run sciflow_init?\"\n",
+    "        )\n",
     "    return lines"
    ]
   },
@@ -196,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "empty_env_lines = ['export USER=\\n', 'export SCIFLOW_BUCKET=\\n']\n",
+    "empty_env_lines = [\"export USER=\\n\", \"export SCIFLOW_BUCKET=\\n\"]\n",
     "\n",
     "# Unused??\n",
     "env_lines_wout_ppath = [\n",
