--- a/nbs/packaging.ipynb
+++ b/nbs/packaging.ipynb
@@ -54,6 +54,7 @@
     "import yaml\n",
     "from fastcore.script import call_parse\n",
     "from nbdev.export import get_config\n",
+    "\n",
     "from sciflow.utils import run_py_module"
    ]
   },
@@ -91,7 +92,9 @@
     "botocore==1.31.64\n",
     "sagemaker\n",
     "scilint==0.2.1\n",
-    "\"\"\".split(\"\\n\")\n",
+    "\"\"\".split(\n",
+    "    \"\\n\"\n",
+    ")\n",
     "\n",
     "reqs_separated = \"boto3==1.28.61 botocore==1.31.64 sagemaker scilint==0.2.1\""
    ]
@@ -245,11 +248,11 @@
    },
    "outputs": [],
    "source": [
-    "if os.path.exists(generated_reqs_path):\n",
-    "    os.remove(generated_reqs_path)\n",
-    "assert not os.path.exists(generated_reqs_path)\n",
+    "if generated_reqs_path.exists():\n",
+    "    generated_reqs_path.unlink()\n",
+    "assert not generated_reqs_path.exists()\n",
     "determine_dependencies(out_dir=test_dir)\n",
-    "assert os.path.exists(generated_reqs_path)"
+    "assert generated_reqs_path.exists()"
    ]
   },
   {
@@ -306,9 +309,16 @@
    },
    "outputs": [],
    "source": [
-    "determine_dependencies(out_dir=test_dir)\n",
     "reqs_str = reqs_file_to_sep_str(generated_reqs_path)\n",
-    "os.remove(generated_reqs_path)"
+    "actual = sorted(\n",
+    "    [\n",
+    "        x.split(\"==\")[0]\n",
+    "        for x in reqs_str.split(\" \")\n",
+    "        if x.split(\"==\")[0] in (\"boto3\", \"numpy\", \"pandas\", \"scilint\")\n",
+    "    ]\n",
+    ")\n",
+    "expected = [\"boto3\", \"numpy\", \"pandas\", \"scilint\"]\n",
+    "assert actual == expected"
    ]
   },
   {
@@ -323,7 +333,9 @@
     "\n",
     "\n",
     "def update_requirements(\n",
-    "    project_dir: Path = None, output_filename: str = \"settings.ini\"\n",
+    "    project_dir: Path = None,\n",
+    "    output_filename: str = \"settings.ini\",\n",
+    "    reqs_str: str = None,\n",
     "):\n",
     "    if project_dir is None:\n",
     "        lib_path = get_config().path(\"lib_path\")\n",
@@ -334,7 +346,8 @@
     "    config.read(settings_path)\n",
     "\n",
     "    os.path.join(project_dir, \"requirements-generated.txt\")\n",
-    "    reqs_str = determine_dependencies(out_dir=project_dir)\n",
+    "    if reqs_str is None:\n",
+    "        reqs_str = determine_dependencies(out_dir=project_dir)\n",
     "\n",
     "    out_path = os.path.join(project_dir, output_filename)\n",
     "    config.set(\"DEFAULT\", \"requirements\", reqs_str)\n",
@@ -351,8 +364,7 @@
    },
    "outputs": [],
    "source": [
-    "determine_dependencies(out_dir=test_dir)\n",
-    "update_requirements(test_dir)"
+    "update_requirements(test_dir, reqs_str=reqs_str)"
    ]
   },
   {
@@ -421,10 +433,15 @@
     "# | export\n",
     "\n",
     "\n",
-    "def create_conda_meta_file(project_dir: Path = None, out_file: str = \"meta.yaml\"):\n",
+    "def create_conda_meta_file(\n",
+    "    project_dir: Path = None, out_file: str = \"meta.yaml\", reqs_str: str = None\n",
+    "):\n",
     "    if project_dir is None:\n",
     "        lib_path = get_config().path(\"lib_path\")\n",
     "        project_dir = lib_path.resolve().parent\n",
+    "\n",
+    "    if reqs_str is None:\n",
+    "        determine_dependencies(out_dir=project_dir)\n",
     "\n",
     "    meta_data = {\n",
     "        \"package\": {\n",
@@ -434,7 +451,7 @@
     "        \"source\": {\"path\": str(get_config().path(\"lib_path\").resolve().parent)},\n",
     "        \"requirements\": {\n",
     "            \"host\": [\"pip\", \"python\", \"setuptools\"],\n",
-    "            \"run\": determine_dependencies(out_dir=project_dir).split(\" \"),\n",
+    "            \"run\": reqs_str.split(\" \"),\n",
     "        },\n",
     "    }\n",
     "    with open(os.path.join(project_dir, out_file), \"w\") as conda_build_file:\n",
@@ -449,7 +466,7 @@
    },
    "outputs": [],
    "source": [
-    "create_conda_meta_file(Path(\"test\"))"
+    "create_conda_meta_file(Path(\"test\"), reqs_str=reqs_str)"
    ]
   },
   {
@@ -724,7 +741,7 @@
        "        'ARTIFACTORY_URL': 'ndartifactory.pe.jfrog.io',\n",
        "        'ARTIFACTORY_CONDA_CHANNEL': 'conda-local',\n",
        "        'LIB_NAME': 'sciflow',\n",
-       "        'VERSION': '0.0.1',\n",
+       "        'VERSION': '1.0.0',\n",
        "        'BUILD_NUMBER': '0'}"
       ]
      },
