--- a/nbs/test/test_export_step.ipynb
+++ b/nbs/test/test_export_step.ipynb
@@ -1,25 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "output-file: test_multistep.html\n",
-    "title: Multi-step Pipeline Example\n",
-    "\n",
-    "---\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# | include: false\n",
-    "# | default_exp test.test_multistep"
+    "# | default_exp test.test_export_step"
    ]
   },
   {
