--- a/nbs/utils.ipynb
+++ b/nbs/utils.ipynb
@@ -150,7 +150,7 @@
     "        stderr=subprocess.PIPE,\n",
     "        stdout=subprocess.PIPE,\n",
     "        env=env,\n",
-    "        universal_newlines=True\n",
+    "        universal_newlines=True,\n",
     "    )\n",
     "\n",
     "    output_code = output.returncode\n",
@@ -297,8 +297,8 @@
    },
    "outputs": [],
    "source": [
-    "assert list(chunks([1,2,3,4,5,6], 3)) == [[1,2, 3], [4, 5, 6]]\n",
-    "assert list(chunks([1,2,3,4,5], 3)) == [[1,2, 3], [4, 5]]"
+    "assert list(chunks([1, 2, 3, 4, 5, 6], 3)) == [[1, 2, 3], [4, 5, 6]]\n",
+    "assert list(chunks([1, 2, 3, 4, 5], 3)) == [[1, 2, 3], [4, 5]]"
    ]
   },
   {
@@ -427,9 +427,10 @@
    },
    "outputs": [],
    "source": [
-    "from nbdev.export import nb_export\n",
+    "if not Path(\"test/test_multistep.ipynb\").exists():\n",
+    "    from nbdev.export_step import nb_named_export\n",
     "\n",
-    "nb_export(\"test/test_multistep.ipynb\")"
+    "    nb_named_export(Path(\"test/test_multistep.ipynb\"))"
    ]
   },
   {
@@ -632,7 +633,9 @@
    },
    "outputs": [],
    "source": [
-    "assert Path(\"test\", \"flows\", \"metaflow\", \"test_export.py\").resolve() == get_flow_path(test_nb_path)"
+    "assert Path(\"test\", \"flows\", \"metaflow\", \"test_export.py\").resolve() == get_flow_path(\n",
+    "    test_nb_path\n",
+    ")"
    ]
   }
  ],
